# API-for-the-library

./: .env.template  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  pytest.ini
alembic/: env.py
lib_api/: __init__.py  app.py  database.py  routing.py
lib_api/business_models/: __init__.py
lib_api/business_models/base_model/: __init__.py  base_model.py
lib_api/business_models/decorators/: __init__.py  error_decorator.py
lib_api/business_models/librarian/: __init__.py  auth_librarian.py  current_librarion.py  librarian_model.py  security.py  util.py
lib_api/business_models/library_models/: __init__.py  models_lib.py
lib_api/factories/: __init__.py  error_factory.py
lib_api/schemas/: __init__.py  book_serialization.py  error_serialization.py  librarian_serialization.py  reader_book_seeialization.py  reader_serialization.py
migrations/: env.py
migrations/versions/: 2025_05_22_1654-1cd919c1787d_first_create_tables.py  2025_05_22_1707-c243d627c590_add_description_to_book.py
tests/: __init__.py  conftest.py  test_app.py
tests/test_library_process/: __init__.py
tests/test_library_process/test_book/: __init__.py  teat_get_book_by_id.py  test_create_book.py  test_delete_book.py  test_get_books.py  test_update_book.py
tests/test_library_process/test_borrow_return/: __init__.py  test_books_has_reader.py  test_borrow.py  test_return.py
tests/test_library_process/test_libration/: __init__.py  test_auth_librarian.py  test_librarian_registration.py
tests/test_library_process/test_reader/: __init__.py  (+5 more)
(+16 files in other folders)
